tests/baselines/reference/iteratorSpreadInCall10.errors.txt
tests/cases/conformance/es6/spread/iteratorSpreadInCall10.ts(15,1): error TS2346: Supplied parameters do not match any signature of call target.


==== tests/cases/conformance/es6/spread/iteratorSpreadInCall10.ts (1 errors) ====
    function foo<T>(s: T[]) { return s[0] }
    class SymbolIterator {
        next() {
            return {
                value: Symbol(),
                done: false
            };
        }
    
        [Symbol.iterator]() {
            return this;
        }
    }
    
    foo(...new SymbolIterator);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.